--- a/package.json
+++ b/package.json
@@ -30,11 +30,15 @@
     "wasm",
     "browser"
   ],
-  "author": "",
+  "author": "timcsy",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/timcsy/demucs-web.git"
+  },
+  "homepage": "https://github.com/timcsy/demucs-web",
+  "bugs": {
+    "url": "https://github.com/timcsy/demucs-web/issues"
   },
   "peerDependencies": {
     "onnxruntime-web": ">=1.17.0"
